기획서 완성

--- a/기획서/기획서.md
+++ b/기획서/기획서.md
@@ -1,4 +1,5 @@
-## 무엇을 
+## 무엇을
+
 커뮤니티 기능을 갖춘 영화 추천 웹 서비스
 
 ## 왜
@@ -8,27 +9,27 @@
 `구비 살롱`이라는 이름의 프로젝트는 다수의 유저들이 같은 날 같은 영화를 함께 시청할 수 있는 커뮤니티 서비스를 구현하였습니다. 해당 프로젝트의 경우, **코로나 시국**으로 인해 사람들간의 만남이 제한되었고, 이로 인해 모두가 함께하는 문화가 점차 사라짐을 극복하고, 많은 사람들과 소통하기 위한 서비스를 구현하고자 하였습니다. 영화를 선택하고, 날짜를 선택하고, 개설된 살롱을 다른 유저들이 참여한다는 매우 단순한 형태임에도 불구하고 당시의 시대적 상황을 적절히 반영한 점을 높이사 최우수 프로젝트로 선정되었습니다.
 
 ## 어떻게
+
 1. 기술 스택은 무엇을 사용 할 것인가?
 - DRF + Vue.js
-
 2. 각자 맡을 업무는 무엇인가?
 - 김태헌 : 팀장 코딩 네비게이터
-- 권아진 : 코딩 드라이버
 
+- 권아진 : 코딩 드라이버
 3. 인증 서비스는 어떻게 구현할 것인가?
 - 소셜 인증 및 기본인증 dj-rest-auth를 활용한 인증
-
 4. DB는 어떤 정보를 기반으로 할 것인가?
 - TMDB 에서 대중적 영화 목록을 DB에 저장
-
 5. 목적에 맞는 서비스를 구현하기 위해 모델링은 어떻게 구성하여야 할 것인가?
-![img](https://drive.google.com/file/d/1HSxmgnu8w92y0ZpqELWbB1xq9LohJbY2/view)
+   
+   - ![제목 없는 다이어그램.drawio.png](C:\Users\multicampus\Desktop\최종\기획서\제목%20없는%20다이어그램.drawio.png)
 
 6. 데이터는 어떠한 형태로 제공될 것인가
-- JSON
-
+- JSON  
 7. 전체 레이아웃은 어떻게 구성할 것인가
-- ![img] (./기획서/레이아웃)
-
+- ![레이아웃.png](C:\Users\multicampus\Desktop\최종\기획서\레이아웃.png)
 8. 전체 테마는 어떻게 구성할까
--  
+
+- 
+
+![카테고리.png](C:\Users\multicampus\Desktop\최종\기획서\카테고리.png)
