--- a/기획서/기획서.md
+++ b/기획서/기획서.md
@@ -22,14 +22,17 @@
 - TMDB 에서 대중적 영화 목록을 DB에 저장
 5. 목적에 맞는 서비스를 구현하기 위해 모델링은 어떻게 구성하여야 할 것인가?
    
-   - ![제목 없는 다이어그램.drawio.png](C:\Users\multicampus\Desktop\최종\기획서\제목%20없는%20다이어그램.drawio.png)
+   - 
+     
+     ![제목 없는 다이어그램.drawio.png](C:\Users\multicampus\Desktop\새%20폴더\기획서\제목%20없는%20다이어그램.drawio.png)
 
 6. 데이터는 어떠한 형태로 제공될 것인가
 - JSON  
 7. 전체 레이아웃은 어떻게 구성할 것인가
-- ![레이아웃.png](C:\Users\multicampus\Desktop\최종\기획서\레이아웃.png)
-8. 전체 테마는 어떻게 구성할까
-
 - 
-
-![카테고리.png](C:\Users\multicampus\Desktop\최종\기획서\카테고리.png)
+  
+  ![레이아웃.png](C:\Users\multicampus\Desktop\새%20폴더\기획서\레이아웃.png)
+8. 전체 테마는 어떻게 구성할까
+- 
+  
+  ![카테고리.png](C:\Users\multicampus\Desktop\새%20폴더\기획서\카테고리.png)
