--- a/기획서/기획서.md
+++ b/기획서/기획서.md
@@ -29,10 +29,6 @@
 6. 데이터는 어떠한 형태로 제공될 것인가
 - JSON  
 7. 전체 레이아웃은 어떻게 구성할 것인가
-- 
-  
-  ![레이아웃.png](C:\Users\multicampus\Desktop\새%20폴더\기획서\레이아웃.png)
+- ![레이아웃.png](C:\Users\multicampus\Desktop\새%20폴더\기획서\레이아웃.png)
 8. 전체 테마는 어떻게 구성할까
-- 
-  
-  ![카테고리.png](C:\Users\multicampus\Desktop\새%20폴더\기획서\카테고리.png)
+- ![카테고리.png](C:\Users\multicampus\Desktop\새%20폴더\기획서\카테고리.png)
